--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
 
 /* Your CSS Code here. */
+body {
+	padding: 0;
+	margin: 0;
+	font-family : Arial, sans-serif;
+	
+}
+nav {
+	background-color: grey;
+	padding: 0.5rem 0;
+	
+}
+nav ul { 
+	display: flex;
+	list-style: none;
+	padding: 0px;
+	justify-content: space-around;
+
+}
